fixed overflow on icons

--- a/css/foundation.css
+++ b/css/foundation.css
@@ -2430,8 +2430,7 @@ meta.foundation-mq-topbar {
   margin-left: -1.375rem;
   margin-right: 0;
   padding: 0;
-  list-style: none;
-  overflow: hidden; }
+  list-style: none; }
   .inline-list > li {
     list-style: none;
     float: left;
